terraform/main.tf
resource "aws_security_group" "web_sg" {

  name = "web-sg"

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_iam_role" "ec2_role" {

  name = "cloud-engineer-role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"

    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"

        Principal = {
          Service = "ec2.amazonaws.com"
        }
      }
    ]
  })
}

resource "aws_iam_instance_profile" "profile" {
  name = "cloud-engineer-profile"
  role = aws_iam_role.ec2_role.name
}

resource "aws_instance" "web" {

  ami           = "ami-08f44e8eca9095668"
  instance_type = "t2.micro"
  key_name = "cloud-assignment-key"


  vpc_security_group_ids = [
    aws_security_group.web_sg.id
  ]

  iam_instance_profile = aws_iam_instance_profile.profile.name

 user_data = <<-EOF
 #!/bin/bash
 dnf update -y
 dnf install nginx -y
 systemctl enable nginx
 systemctl start nginx

 EOFF

  tags = {
    Name = "cloud-assignment"
  }
}
